--- a/css/partials/_global.styl
+++ b/css/partials/_global.styl
@@ -22,6 +22,7 @@ pre
 a:link, a:visited, a:active, a:hover
   color #c691ff
   text-decoration: none;
+  border-bottom 1px dashed hsl(50, 60%, 50%)
   transition: color .3s
 
 a:hover
