--- a/css/partials/_header.styl
+++ b/css/partials/_header.styl
@@ -63,7 +63,7 @@ header.global
   display block
   height 3px
   z-index 50
-  background-color $accent-color
+  background-color hsl(278, 57%, 50%)
 
   // .ribbon
   //   position absolute
